# LLM-Engineers-Handbook

./: .ci-trigger  .env.example  .gitignore  .pre-commit-config.yaml  CHAT_HISTORY_LORA_TRAINING.md  Dockerfile  FINETUNING_README.md  LORA_FINETUNING_GUIDE.md  M4_MAC_SETUP_COMPLETE.md  MAC_TRAINING_GUIDE.md  MONITORING_GUIDE.md  Makefile  README.md  UNSLOTH_SETUP_STATUS.md  docker-compose.yml  feature-branch-workflow.md  git-workflow.md  pyproject.toml  ruff.toml  run.py  settings.py  verify_setup.py
.github/: ci.yaml
.github/workflows/: cd.yaml  ci.yaml
code_snippets/: 03_custom_odm_example.py  03_orm.py  08_instructor_embeddings.py  08_text_embeddings.py  08_text_image_embeddings.py  sample.py
configs/: create_dataset.yaml  digital_data_etl_alex_vesa.yaml  digital_data_etl_maxime_labonne.yaml  digital_data_etl_paul_iusztin.yaml  end_to_end_data.yaml  evaluating.yaml  export_artifact_to_json.yaml  feature_engineering.yaml  generate_instruct_datasets.yaml  generate_preference_datasets.yaml  training.yaml
data/artifacts/: cleaned_documents.json  instruct_datasets.json  preference_datasets.json  raw_documents.json
data/data_warehouse_raw_data/: ArticleDocument.json  UserDocument.json
data/dummy_dataset/train/: data-00000-of-00001.arrow
dummy_dataset/test/: data-00000-of-00001.arrow  state.json
dummy_dataset/train/: state.json
examples/: 08_text_image_embeddings.py
llm_engineering/: __init__.py  rag.py  run.py  settings.py
llm_engineering/application/: __init__.py
llm_engineering/application/crawlers/: __init__.py  base.py  custom_article.py  dispatcher.py  github.py  linkedin.py  medium.py
llm_engineering/application/data/preprocessing/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
llm_engineering/application/dataset/: __init__.py  constants.py  generation.py  output_parsers.py  splits.py  utils.py
llm_engineering/application/networks/: __init__.py  embeddings.py
llm_engineering/application/pipelines/: __init__.py  create_dataset.py  digital_data_etl.py  feature_engineering.py
llm_engineering/application/preprocessing/: __init__.py  chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
llm_engineering/application/preprocessing/operations/: __init__.py  chunking.py  cleaning.py  embeddings.py
llm_engineering/application/rag/: base.py  prompt_templates.py  query_expanison.py  reranking.py  retriever.py  self_query.py
llm_engineering/application/steps/: __init__.py
llm_engineering/application/steps/create_dataset/: __init__.py
llm_engineering/application/steps/etl/: crawl_links.py  get_or_create_user.py
llm_engineering/application/steps/feature_engineering/: __init__.py  clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
llm_engineering/application/utils/: __init__.py  files_io.py  misc.py  split_user_full_name.py
llm_engineering/core/: interfaces.py  langchain_utils.py
llm_engineering/core/aws/roles/: create_execution_role.py  create_sagemaker_role.py
llm_engineering/data/crawlers/: base.py  dispatcher.py  github.py  linkedin.py  medium.py
llm_engineering/data/db/: documents.py
llm_engineering/domain/: __init__.py  base.py  chunk.py  chunks.py  clean.py  cleaned_documents.py  dataset.py  documents.py  embedded_chunk.py  embedded_chunks.py  exceptions.py  inference.py  prompt.py  queries.py  raw.py  types.py
llm_engineering/domain/base/: __init__.py  nosql.py  vector.py
llm_engineering/infrastructure/: files_io.py  inference_pipeline_api.py  llm_provider.py  opik_utils.py
llm_engineering/infrastructure/aws/deploy/: autoscaling_sagemaker_endpoint.py  delete_sagemaker_endpoint.py
llm_engineering/infrastructure/aws/roles/: create_execution_role.py  create_sagemaker_role.py
llm_engineering/infrastructure/db/: connectors.py  mongo.py  qdrant.py
llm_engineering/interfaces/: rag.py
llm_engineering/interfaces/orchestrator/: run.py
llm_engineering/interfaces/orchestrator/pipelines/: __init__.py  create_dataset.py  digital_data_etl.py  export_artifact_to_json.py  feature_engineering.py  generate_instruct_datasets.py  training.py
llm_engineering/model/: Readme.md  delete_inference_endpoint.py  utils.py
llm_engineering/model/deploy/: autoscaling_sagemaker_endpoint.py
llm_engineering/model/evaluation/: evaluate.py  requirements.txt  sagemaker.py
llm_engineering/model/finetuning/: ARCHITECTURE_DIAGRAM.md  COMPARISON.md  FINE_TUNING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  create_dummydata.py  finetune.py  requirements-unsloth.txt  requirements.txt  run.py  sagemaker.py  unsloth_sft_standalone.py  upload_dataset.py
llm_engineering/model/inference/: __init__.py  inference.py  run.py  test.py
llm_engineering/pipelines/: __init__.py  digital_data_etl.py  t.py
llm_engineering/steps/: digital_data_etl.py
model/deploy/: test_sagemaker_autoscaling.py
model/deploy/huggingface/: config.py  run.py  sagemaker_huggingface.py
notebooks/: unsloth_finetuning.ipynb
pipelines/: __init__.py  digital_data_etl.py  end_to_end_data.py  evaluating.py  export_artifact_to_json.py  feature_engineering.py  generate_datasets.py  generate_instruct_datasets.py  training.py
steps/: __init__.py
steps/etl/: __init__.py  crawl_links.py  get_or_create_user.py
steps/evaluating/: evaluate.py
steps/export/: serialize_artifact.py  to_json.py
steps/feature_engineering/: __init__.py  clean.py  load_to_vector_db.py  query_data_warehouse.py
steps/generate_datasets/: __init__.py  create_prompts.py  generate_intruction_dataset.py  generate_preference_dataset.py  push_to_huggingface.py
steps/generate_instruct_datasets/: create_prompts.py  push_to_huggingface.py
steps/training/: __init__.py  train.py
tests/integration/: integration_example_test.py  test_minimax_integration.py
tests/unit/: dummy_test.py  test_llm_provider.py  unit_example_test.py
tools/: data_warehouse.py  delete_all_zenml_pipeline_runs.sh  demo_generate_pairs.py  finetune_mac.py  generate_instruction_data.py  ml_service.py  rag.py  run.py
(+22 files in other folders)
